samples/_failures_safe/1761597351_4041f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddde1d93.c: In function ‘main’:
./samples/SAFE/__tmp_ddde1d93.c:156:33: error: expected ‘;’ at end of input
  156 |                     print_matrix
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_ddde1d93.c:156:21: error: expected declaration or statement at end of input
  156 |                     print_matrix
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ddde1d93.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ddde1d93.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ddde1d93.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ddde1d93.c:156:21: error: expected declaration or statement at end of input
